2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SqlDataSourceView.cs: fixed parameters init for ExecuteUpdate

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* DataSourceCacheManager.cs:
	* ObjectDataSource.cs:
	* SqlDataSource.cs:
	fixed: cache considers parameters values changes.				

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DetailsView.cs: fixed DeleteItem, excluded keys for new values
	* SqlDataSourceView.cs: fixed ExecuteDelete, check cancel in
	OnDeleting event

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs: fixed: show all rows when AllowPaging=false

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlDataSourceView.cs: fixed CreateDbParameter, used DBNull for value=null.

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* ButtonField.cs: fixed: consider its CausesValidation property.

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs: fixed:
	ReadOnly property is false for AutoGeneratedColumn if field is DataKey.
	causesValidation parameter is considered properly in UpdateRow.
	OldValues contains readonly fields values

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SqlDataSourceView.cs: fixed InitializeParameters, added
	ParameterPrefix when check that param is already in collection

2007-01-07 Igor Zelmanovich <igorz@mainsoft.com>

	* AdRotator.cs: fixed: considers absolute uri such html://......	 

2007-01-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SqlDataSourceView.cs: fixed insert, delete, update methods, added
	calls to OnDataSourceViewChanged

2007-01-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* added ProfileParameter.cs

2007-01-07 Igor Zelmanovich <igorz@mainsoft.com>

	* Label.cs: fixed: according MSDN OnPreRender is not overridden.	 

2007-01-04 Adar Wesley <adarw@mainsoft.com>

	* ImageButton.cs: implemented GenerateEmptyAlternateText

2007-01-04 Igor Zelmanovich <igorz@mainsoft.com>
